# deploy-utils

./: Cargo.toml  README.md  flake.nix  package.nix
.github/workflows/: ci.yaml
examples/: README.md  builder.sh
examples/default/: flake.nix
examples/long/: flake.nix
examples/no-profile-path/: flake.nix
examples/user-from-ssh-user/: flake.nix
src/: cli.rs  command.rs  display.rs  lib.rs  natural_sort.rs  nix.rs  profile.rs  target.rs
src/cli/: copy.rs  push.rs  status.rs
src/cli/push/: eval_profile.nix
src/cli/status/: check_profile.sh  get_profile_path.nix
src/profile/: filter_deploy.nix
