[package]
name = "deploy-utils"
version = "0.0.0"
edition = "2024"
description = "Additional utilities for working with deploy-rs"
readme = "README.md"
repository = "https://github.com/bartoszwjn/deploy-utils"
license = "MIT OR Apache-2.0"
keywords = ["nix"]
categories = ["command-line-utilities"]
publish = false
default-run = "deploy-utils"

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
eyre = { version = "0.6.12", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
whoami = "2.1.1"
